2008-03-28  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade:
	* clock.c: Do the same conversion to GtkDialog for the edit
	and find location windows.

2008-03-27  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Convert the set-time window into a dialog, to
	make Esc work, pointed out by Dan Winship. 

	* clock.c (ensure_time_settings_window): Handle delete events.

2008-03-27  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Make the find-location window larger. 
	Change proposed by Dan Winship.

2008-03-14  Matthias Clasen  <mclasen@redhat.com>

	* clock.c (fill_prefs_window): Make sure that we create the
	cities store before we fill the preference window. 

2008-03-13  William Lachance  <wrlach@gmail.com>

	* clock.c: (find_entry_changed): Fix crash when there are no
	locations available. Fixes bug #521563.

==================== 2.22.0 ====================

2008-03-05  Jens Granseuer  <jensgr@gmx.net>

	* clock-face.c: (update_timeofday):
	* clock-location-tile.c: (clock_location_tile_fill):
	* clock-location.c: (guess_zone_from_tree):
	* clock-zonetable.c: (clock_zonetable_parse_location),
	(clock_zonetable_load_zonetab), (clock_zonetable_load_iso3166):
	* clock.c: (parse_gconf_cities), (run_prefs_edit_save),
	(run_find_location): fix build for compilers that don't like C99.
	Fixes bug #518895.

2008-03-03  Vincent Untz  <vuntz@gnome.org>

	Display sunrise/sunset in local (to the location) time.
	Fix bug #518106. Patch by Matthias Clasen <mclasen@redhat.com>

	* clock-location-tile.[ch]: (weather_info_setup_tooltip): hack to
	display the sunrise/sunset in local time
	(weather_tooltip): update
	* clock.c: (weather_tooltip): update

2008-02-28  David Zeuthen  <davidz@redhat.com>

	* set-timezone.c (can_do): Don't hardcode the polkit results for
	determining when we can authenticate to gain an
	authorization. This fixes a bug where ONE_SHOT auths weren't
	handled because PolKitResult enumerations for these were added
	after this code was written.