@@ -1,5 +1,11 @@
 2008-03-28  Matthias Clasen  <mclasen@redhat.com>
 
+	* clock.c: Fix issues with adding/removing locations, pointed
+	out by Dan Winship. This regression was introduced in the 
+	commit on 2008-03-14.
+
+2008-03-28  Matthias Clasen  <mclasen@redhat.com>
+
 	* clock.glade:
 	* clock.c: Do the same conversion to GtkDialog for the edit
 	and find location windows.
